--- a/api/openapi/components/responses/Nazo.yaml
+++ b/api/openapi/components/responses/Nazo.yaml
@@ -5,14 +5,14 @@ content:
       type: string
       description: |
         Response body is `pages.contents` of configuration file.
-        And response Content-Type is `pages.contentsType` of configuration file.
+        And response Content-Type is `pages.contentType` of configuration file.
 
         If configuration file is:
         ```yaml
         pages:
           - id: 05b1f9cf-8543-44e5-b54b-e367d8b93ab3
             answer: 't'
-            contentsType: "application/json"
+            contentType: "application/json"
             contents: "{\"q\": \"tone - one = ?\"}\n"
         ```
 
