chore: Upgrade GitHub Actions to latest versions in workflow

--- a/.github/workflows/generate-api-doc.yml
+++ b/.github/workflows/generate-api-doc.yml
@@ -23,7 +23,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       # Runs a set of commands using the runners shell
       - name: Install redoc-cli and generate html
@@ -36,20 +36,21 @@ jobs:
           make build/doc/index.html
         
       - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v2.3.1
+        uses: actions/upload-artifact@v4
         with:
           name: doc
           path: build/doc/index.html
 
   deploy:
     needs: build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v2.1.0
-        name: doc
+      - uses: actions/download-artifact@v4
+        with:
+          name: doc
     
       - name: Deploy Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: doc
